2010-02-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        Particularly constructed WebFrames can try to access a null HistoryItem
        <rdar://problem/7638892> and https://bugs.webkit.org/show_bug.cgi?id=35063

        Add the specific ability to test this API pattern. 

        For now only on Mac, perhaps on the main Windows port later, probably not relevant for other ports.

        * DumpRenderTree/LayoutTestController.cpp:
        (apiTestNewWindowDataLoadBaseURLCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (-[APITestDelegate initWithCompletionCondition:]):
        (-[APITestDelegate webView:didFailLoadWithError:forFrame:]):
        (-[APITestDelegate webView:didFailProvisionalLoadWithError:forFrame:]):
        (-[APITestDelegate webView:didFinishLoadForFrame:]):
        (LayoutTestController::apiTestNewWindowDataLoadBaseURL): Create a WebView, do a loadData: in its
          mainFrame, and synchronously wait for main load completion.

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::apiTestNewWindowDataLoadBaseURL):
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::apiTestNewWindowDataLoadBaseURL):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::apiTestNewWindowDataLoadBaseURL):

2010-02-18  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Eric Seidel.

        Teach resolve-ChangeLogs to act as a merge-driver for Git

        https://bugs.webkit.org/show_bug.cgi?id=28721

        To enable automatic merging of ChangeLog files, use the following command:

        git config merge.changelog.driver "resolve-ChangeLogs --merge-driver %O %A %B"

        The driver always works in "downstream" merge mode, meaning