@@ -1,3 +1,15 @@
+2010-02-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        https://bugs.webkit.org/show_bug.cgi?id=35134
+        <rdar://problem/7246280> Crash when a plugin calls NPN_SetStatus(0)
+
+        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
+        (testSetStatus):
+        (pluginInvoke):
+        Added a setStatus() method.
+
 2010-02-18  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Sam Weinig.
